-Implemented PearsonsCorrelation -Added InfoBoxes to be used to display stock price of series at mouse position

--- a/src/sample/AppStyle.css
+++ b/src/sample/AppStyle.css
@@ -9,6 +9,12 @@
     -fx-border-color: dimgray;
     -fx-border-width: 2px;
 }
+
+.lineChart {
+    -fx-border-color: dimgrey;
+    -fx-border-width:  0.5;
+}
+
 .lineChart .chart-series-line {
     -fx-stroke-width: 2px;
 }
