--- a/src/sample/new.fxml
+++ b/src/sample/new.fxml
@@ -5,7 +5,9 @@
 <?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Spinner?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -15,56 +17,86 @@
 <?import javafx.scene.layout.VBox?>
 
 <?import sample.LineChartWithMarkers?>
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="MainBox" stylesheets="@/sample/AppStyle.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<VBox xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
    <children>
-      <AnchorPane maxWidth="200" prefHeight="200.0" prefWidth="200.0" styleClass="leftSideSettings">
+      <MenuBar>
+        <menus>
+          <Menu mnemonicParsing="false" text="File">
+            <items>
+              <MenuItem mnemonicParsing="false" text="Close" />
+            </items>
+          </Menu>
+          <Menu mnemonicParsing="false" text="Edit">
+            <items>
+              <MenuItem mnemonicParsing="false" text="Delete" />
+            </items>
+          </Menu>
+          <Menu mnemonicParsing="false" text="Help">
+            <items>
+              <MenuItem mnemonicParsing="false" text="About" />
+            </items>
+          </Menu>
+        </menus>
+      </MenuBar>
+      <AnchorPane>
          <children>
-            <Button mnemonicParsing="false" onAction="#clearLineChart" styleClass="basicButton" text="CLEAR" AnchorPane.leftAnchor="50" AnchorPane.rightAnchor="50" AnchorPane.topAnchor="10" />
-            <Button fx:id="fillLineChartButton" layoutY="33.0" mnemonicParsing="false" onAction="#threadedDrawFunction" prefWidth="100.0" styleClass="basicButton" text="LOAD TICKERS" AnchorPane.leftAnchor="50" AnchorPane.rightAnchor="50" AnchorPane.topAnchor="50" />
-            <VBox layoutX="13.0" layoutY="96.0" prefHeight="306.0" prefWidth="174.0">
+            <HBox maxHeight="-Infinity" maxWidth="-Infinity" AnchorPane.bottomAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.leftAnchor="0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="579.0" prefWidth="600.0" styleClass="MainBox" stylesheets="@/sample/AppStyle.css">
                <children>
-                  <ComboBox fx:id="intervalCombobox" prefHeight="26.0" prefWidth="184.0" promptText="SET TIME INTERVAL" styleClass="leftTextField" />
-                  <TextField fx:id="leftTextField" onAction="#onEnter" prefHeight="26.0" prefWidth="174.0" promptText="SEARCH FOR TICKERS HERE" styleClass="leftTextField">
-                     <tooltip>
-                        <Tooltip text="Enter a search string and press the search icon to get stock ticker suggestions" />
-                     </tooltip>
-                  </TextField>
-                  <HBox prefHeight="26.0" prefWidth="160.0"><padding><Insets bottom="5" left="0" right="0" top="5" /></padding>
+                  <AnchorPane maxWidth="200" prefHeight="200.0" prefWidth="200.0" styleClass="leftSideSettings">
                      <children>
-                        <AnchorPane fx:id="comboBoxAnchorPane" prefHeight="26.0" prefWidth="190.0">
+                        <Button mnemonicParsing="false" onAction="#clearLineChart" styleClass="basicButton" text="CLEAR" AnchorPane.leftAnchor="50" AnchorPane.rightAnchor="50" AnchorPane.topAnchor="10" />
+                        <Button fx:id="fillLineChartButton" layoutY="33.0" mnemonicParsing="false" onAction="#threadedDrawFunction" prefWidth="100.0" styleClass="basicButton" text="LOAD TICKERS" AnchorPane.leftAnchor="50" AnchorPane.rightAnchor="50" AnchorPane.topAnchor="50" />
+                        <VBox layoutX="13.0" layoutY="96.0" prefHeight="306.0" prefWidth="174.0">
                            <children>
-                              <ComboBox fx:id="leftComboBox" prefHeight="26.0" prefWidth="90.0" promptText="RESULTS" />
+                              <ComboBox fx:id="intervalCombobox" prefHeight="26.0" prefWidth="184.0" promptText="SET TIME INTERVAL" styleClass="leftTextField" />
+                              <TextField fx:id="leftTextField" onAction="#onEnter" prefHeight="26.0" prefWidth="174.0" promptText="SEARCH FOR TICKERS HERE" styleClass="leftTextField">
+                                 <tooltip>
+                                    <Tooltip text="Enter a search string and press the search icon to get stock ticker suggestions" />
+                                 </tooltip>
+                              </TextField>
+                              <HBox prefHeight="26.0" prefWidth="160.0">
+                                 <padding>
+                                    <Insets bottom="5" left="0" right="0" top="5" />
+                                 </padding>
+                                 <children>
+                                    <AnchorPane fx:id="comboBoxAnchorPane" prefHeight="26.0" prefWidth="190.0">
+                                       <children>
+                                          <ComboBox fx:id="leftComboBox" prefHeight="26.0" prefWidth="90.0" promptText="RESULTS" />
+                                       </children>
+                                    </AnchorPane>
+                                    <Button fx:id="searchButton" mnemonicParsing="false" onAction="#threadedSearchFunction" prefHeight="26.0" prefWidth="198.0" text="Search" />
+                                 </children>
+                              </HBox>
+                              <Button mnemonicParsing="false" onAction="#addTicker" prefHeight="26.0" prefWidth="190.0" text="ADD TO LIST" />
+                              <Button mnemonicParsing="false" onAction="#deleteTicker" prefHeight="26.0" prefWidth="274.0" text="REMOVE FROM LIST" />
+                              <TableView fx:id="tickerTable" prefHeight="700.0" prefWidth="174.0">
+                                <columns>
+                                  <TableColumn fx:id="symbolColumn" minWidth="0.0" prefWidth="60" text="SYMBOL" />
+                                  <TableColumn fx:id="priceColumn" minWidth="0.0" prefWidth="113" text="COMPANY NAME" />
+                                </columns>
+                              </TableView>
+                               <Button mnemonicParsing="false" onAction="#setZoom" prefHeight="26" prefWidth="200" text="ZOOM" />
+                               <Button mnemonicParsing="false" onAction="#resetZoom" prefHeight="26" prefWidth="200" text="UNZOOM" />
                            </children>
-                        </AnchorPane>
-                        <Button fx:id="searchButton" mnemonicParsing="false" onAction="#threadedSearchFunction" prefHeight="26.0" prefWidth="198.0" text="Search" />
+                        </VBox>
+                        <Button fx:id="flipbutton" layoutY="50.0" mnemonicParsing="false" onAction="#createPearsonValue" text="Button" />
                      </children>
-                  </HBox>
-                  <Button mnemonicParsing="false" onAction="#addTicker" prefHeight="26.0" prefWidth="190.0" text="ADD TO LIST" />
-                  <Button mnemonicParsing="false" onAction="#deleteTicker" prefHeight="26.0" prefWidth="274.0" text="REMOVE FROM LIST" />
-                  <TableView fx:id="tickerTable" prefHeight="700.0" prefWidth="174.0">
-                    <columns>
-                      <TableColumn fx:id="symbolColumn" minWidth="0.0" prefWidth="60" text="SYMBOL" />
-                      <TableColumn fx:id="priceColumn" minWidth="0.0" prefWidth="113" text="COMPANY NAME" />
-                    </columns>
-                  </TableView>
-                   <Button mnemonicParsing="false" onAction="#setZoom" text="ZOOM" prefHeight="26" prefWidth="200"/>
-                   <Button mnemonicParsing="false" onAction="#resetZoom" text="UNZOOM" prefHeight="26" prefWidth="200"/>
+                  </AnchorPane>
+                  <AnchorPane prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
+                     <children>
+                        <LineChartWithMarkers fx:id="lineChart" layoutX="14.0" prefHeight="400.0" prefWidth="296.0" styleClass="lineChart" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="-14.0" AnchorPane.topAnchor="0.0">
+                          <xAxis>
+                            <NumberAxis label="Date" side="BOTTOM" fx:id="xAxis" />
+                          </xAxis>
+                          <yAxis>
+                            <NumberAxis fx:id="yAxis" label="Price" side="LEFT" tickUnit="10" />
+                          </yAxis>
+                        </LineChartWithMarkers>
+                     </children>
+                  </AnchorPane>
                </children>
-            </VBox>
-            <Button fx:id="flipbutton" layoutY="50.0" mnemonicParsing="false" onAction="#testbutton" text="Button" />
-         </children>
-      </AnchorPane>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
-         <children>
-            <LineChartWithMarkers fx:id="lineChart" layoutX="14.0" prefHeight="400.0" prefWidth="296.0" styleClass="lineChart" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="-14.0" AnchorPane.topAnchor="0.0">
-              <xAxis>
-                <NumberAxis label="Date" side="BOTTOM" fx:id="xAxis"/>
-              </xAxis>
-              <yAxis>
-                <NumberAxis fx:id="yAxis" label="Price" side="LEFT" tickUnit="10" />
-              </yAxis>
-            </LineChartWithMarkers>
+            </HBox>
          </children>
       </AnchorPane>
    </children>
-</HBox>
+</VBox>
