-Added StackPanes for displaying stock price at cursor xPosition, and percentage difference when dragging mouse -Implemented LineChartMouseController -Migrated methods away from Controller

--- a/src/sample/new.fxml
+++ b/src/sample/new.fxml
@@ -75,18 +75,17 @@
                                   <TableColumn fx:id="priceColumn" minWidth="0.0" prefWidth="113" text="COMPANY NAME" />
                                 </columns>
                               </TableView>
-                               <Button mnemonicParsing="false" onAction="#setZoom" prefHeight="26" prefWidth="200" text="ZOOM" />
                                <Button mnemonicParsing="false" onAction="#resetZoom" prefHeight="26" prefWidth="200" text="UNZOOM" />
                            </children>
                         </VBox>
-                        <Button fx:id="flipbutton" layoutY="50.0" mnemonicParsing="false" onAction="#createPearsonValue" text="Button" />
+                        <Button fx:id="flipbutton" layoutY="50.0" mnemonicParsing="false" text="Button"/>
                      </children>
                   </AnchorPane>
                   <AnchorPane prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
                      <children>
-                        <LineChartWithMarkers fx:id="lineChart" layoutX="14.0" prefHeight="400.0" prefWidth="296.0" styleClass="lineChart" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="-14.0" AnchorPane.topAnchor="0.0">
+                        <LineChartWithMarkers fx:id="lineChart" createSymbols="false" layoutX="14.0" prefHeight="400.0" prefWidth="296.0" styleClass="lineChart" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="20" AnchorPane.topAnchor="0.0">
                           <xAxis>
-                            <NumberAxis label="Date" side="BOTTOM" fx:id="xAxis" />
+                            <NumberAxis label="Date" minorTickVisible="false" side="BOTTOM" fx:id="xAxis" />
                           </xAxis>
                           <yAxis>
                             <NumberAxis fx:id="yAxis" label="Price" side="LEFT" tickUnit="10" />
