--- a/src/sample/new.fxml
+++ b/src/sample/new.fxml
@@ -49,6 +49,7 @@
                         <VBox layoutX="13.0" layoutY="96.0" prefHeight="306.0" prefWidth="174.0">
                            <children>
                               <ComboBox fx:id="intervalCombobox" prefHeight="26.0" prefWidth="184.0" promptText="SET TIME INTERVAL" styleClass="leftTextField" />
+                              <ComboBox fx:id="selectedData" prefHeight="26.0" prefWidth="184.0" promptText="DATA TYPE" styleClass="leftTextField" />
                               <TextField fx:id="leftTextField" onAction="#onEnter" prefHeight="26.0" prefWidth="174.0" promptText="SEARCH FOR TICKERS HERE" styleClass="leftTextField">
                                  <tooltip>
                                     <Tooltip text="Enter a search string and press the search icon to get stock ticker suggestions" />
@@ -83,6 +84,7 @@
                   </AnchorPane>
                   <AnchorPane prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
                      <children>
+
                         <LineChartWithMarkers fx:id="lineChart" createSymbols="false" layoutX="14.0" prefHeight="400.0" prefWidth="296.0" styleClass="lineChart" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="20" AnchorPane.topAnchor="0.0">
                           <xAxis>
                             <NumberAxis label="Date" minorTickVisible="false" side="BOTTOM" fx:id="xAxis" />
