--- a/src/GUI/views/stockTab.fxml
+++ b/src/GUI/views/stockTab.fxml
@@ -14,7 +14,7 @@
                     <children>
                         <VBox layoutX="13.0" layoutY="13.0" prefHeight="306.0" prefWidth="174.0">
                             <children>
-                                <ComboBox fx:id="intervalCombobox" prefHeight="26.0" prefWidth="184.0" promptText="SET TIME INTERVAL" styleClass="leftTextField" />
+                                <ComboBox fx:id="intervalCombobox" onAction="#onIntervalChange" prefHeight="26.0" prefWidth="184.0" promptText="SET TIME INTERVAL" styleClass="leftTextField" />
                                 <ComboBox fx:id="selectedData" prefHeight="26.0" prefWidth="184.0" promptText="DATA TYPE" styleClass="leftTextField" />
                                 <TextField fx:id="leftTextField" onAction="#onEnter" prefHeight="26.0" prefWidth="174.0" promptText="SEARCH FOR TICKERS HERE" styleClass="leftTextField">
                                     <tooltip>
