--- a/src/GUI/views/mainWindow.fxml
+++ b/src/GUI/views/mainWindow.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.control.Tab?>
 
 
-<VBox xmlns="http://javafx.com/javafx/10.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.controllers.mainWindowController">
+<VBox xmlns="http://javafx.com/javafx/10.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.mainWindowController">
     <children>
         <MenuBar>
             <menus>
