--- a/src/gui/views/welcomeTab.fxml
+++ b/src/gui/views/welcomeTab.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.text.Font?>
 <AnchorPane maxHeight="-Infinity" scaleShape="true" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2" xmlns:fx="http://javafx.com/fxml/1">
     <children>
-        <Label layoutX="14.0" layoutY="14.0" prefHeight="17.0" prefWidth="452.0" text="Welcome to StockViewer Version 0.0.1" textFill="#504f4f">
+        <Label layoutX="14.0" layoutY="14.0" prefHeight="17.0" prefWidth="452.0" text="Welcome to StockViewer Version 0.2.🍝" textFill="#504f4f">
             <font>
                 <Font name="Arial" size="21.0" />
             </font>
