--- a/src/main/resources/StockTab.fxml
+++ b/src/main/resources/StockTab.fxml
@@ -5,7 +5,7 @@
 <?import gui.LineChartWithMarkers?>
 <?import javafx.scene.chart.NumberAxis?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.Controller">
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.StockTabController">
     <children>
         <HBox AnchorPane.topAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.bottomAnchor="0">
             <AnchorPane  prefWidth="200.0" styleClass="leftSideSettings">
@@ -58,8 +58,14 @@
                             </yAxis>
                         </LineChartWithMarkers>
                         <AnchorPane prefHeight="0">
-                            <TextArea AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0"
+                            <SplitPane orientation="HORIZONTAL" AnchorPane.topAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.bottomAnchor="0" dividerPositions="1">
+                                <AnchorPane AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0"
+                                            AnchorPane.topAnchor="0"></AnchorPane>
+
+                                <TextArea AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0"
                                        AnchorPane.topAnchor="0" text="Test" fx:id="pearsonsTextField"></TextArea>
+
+                            </SplitPane>
 
                         </AnchorPane>
                     </SplitPane>
