--- a/src/main/resources/TradingTab.fxml
+++ b/src/main/resources/TradingTab.fxml
@@ -16,15 +16,20 @@
             <AnchorPane prefWidth="200" HBox.hgrow="ALWAYS">
                <children>
                   <VBox  layoutX="10" layoutY="10">
-                      <ComboBox fx:id="portfolioComboBox" layoutX="14.0" layoutY="14.0" prefWidth="150.0" promptText="Select Portfolio"  />
+                      <TextField fx:id="newPortfolioNameField" prefWidth="150.0" promptText="Name New Portfolio"/>
+                      <TextField fx:id="newPortfolioLiquidityField" prefWidth="150.0" promptText="Initial Liquidity"/>
+
+                      <Button fx:id="createPortfolioButton" onAction="#createPortfolio" prefWidth="150.0" text="Create Portfolio"  />
+                      <Button fx:id="deletePortfolioButton" onAction="#deletePortfolio" prefWidth="150.0" text="Delete Portfolio"  />
+                      <ComboBox fx:id="portfolioComboBox" prefWidth="150.0" promptText="Select Portfolio"  />
                       <Button fx:id="updateButton" prefWidth="150.0" text="Update Portfolio"/>
                       <TextField fx:id="leftTextField"  prefHeight="26.0" prefWidth="150.0" promptText="SEARCH"/>
                       <Button fx:id="searchButton" onAction="#search" text="SEARCH" prefWidth="150.0"/>
-                      <ComboBox fx:id="tradingComboBox" layoutX="14.0" layoutY="14.0" prefWidth="150.0" promptText="Results" />
+                      <ComboBox fx:id="tradingComboBox" onAction="#updateCurrentTicker" layoutX="14.0" layoutY="14.0" prefWidth="150.0" promptText="Results" />
                       <TextField fx:id="quantityField" prefWidth="150.0" promptText="Quantity"/>
                       <TextField fx:id="buyDateField" prefWidth="150.0" promptText="Buy Date"/>
                       <TextField fx:id="PriceField" prefWidth="150.0" promptText="Price" editable="false"/>
-                      <Button fx:id="buyButton" prefWidth="150.0" text="BUY"/>
+                      <Button fx:id="buyButton" onAction="#buyPosition" prefWidth="150.0" text="BUY"/>
                    </VBox>
                </children>
             </AnchorPane>
