Add sell functionality

--- a/src/main/resources/TradingTab.fxml
+++ b/src/main/resources/TradingTab.fxml
@@ -22,7 +22,6 @@
                       <Button fx:id="createPortfolioButton" onAction="#createPortfolio" prefWidth="150.0" text="Create Portfolio"  />
                       <Button fx:id="deletePortfolioButton" onAction="#deletePortfolio" prefWidth="150.0" text="Delete Portfolio"  />
                       <ComboBox fx:id="portfolioComboBox" onAction="#selectCurrentPortfolio" prefWidth="150.0" promptText="Select Portfolio"  />
-                      <Button fx:id="updateButton" prefWidth="150.0" text="Update Portfolio"/>
                       <TextField fx:id="leftTextField"  prefHeight="26.0" prefWidth="150.0" promptText="SEARCH"/>
                       <Button fx:id="searchButton" onAction="#search" text="SEARCH" prefWidth="150.0"/>
                       <ComboBox fx:id="tradingComboBox" onAction="#updateCurrentTicker" layoutX="14.0" layoutY="14.0" prefWidth="150.0" promptText="Results" />
@@ -30,6 +29,7 @@
                       <TextField fx:id="buyDateField" prefWidth="150.0" promptText="Buy Date"/>
                       <TextField fx:id="PriceField" prefWidth="150.0" promptText="Price" editable="false"/>
                       <Button fx:id="buyButton" onAction="#buyPosition" prefWidth="150.0" text="BUY"/>
+                      <Button fx:id="sellButton" onAction="#sellPosition" prefWidth="150.0" text="SELL"/>
                    </VBox>
                </children>
             </AnchorPane>
