--- a/src/main/resources/WelcomeTab.fxml
+++ b/src/main/resources/WelcomeTab.fxml
@@ -4,9 +4,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefWidth="800.0" scaleShape="true" xmlns="http://javafx.com/javafx/10.0.2" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="357.0" prefWidth="800.0" scaleShape="true" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
     <children>
-        <Label layoutX="14.0" layoutY="14.0" prefHeight="17.0" prefWidth="452.0" text="Welcome to StockViewer Version 0.2.🍝" textFill="#504f4f">
+        <Label layoutX="14.0" layoutY="14.0" prefHeight="17.0" prefWidth="452.0" text="Welcome to StockViewer Version 0.3.🍝.1" textFill="#504f4f">
             <font>
                 <Font name="Arial" size="21.0" />
             </font>
@@ -26,5 +26,6 @@
          </font>
       </Label>
       <Label layoutX="577.0" layoutY="83.0" text="AlphaVantage" />
+      <Label layoutX="42.0" layoutY="179.0" prefHeight="17.0" prefWidth="433.0" text="Trading: Use the searchbar to find stocks, enter buydate and quantity" />
     </children>
 </AnchorPane>
